--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -29,7 +29,7 @@
     html, body {
       width: 100%;
       min-height: 100svh;
-      background-color: #e9f4ff; /* fundo neutro; mapa é o fundo principal agora */
+      background-color: #ffffff; /* laterais brancas */
       font-family: "Times New Roman", Times, serif;
       -webkit-user-select: none;
       user-select: none;
@@ -68,13 +68,14 @@
     /* ====== Layout principal com MAPA ====== */
     .map-container {
       width: 100%;
-      min-height: calc(100svh - 72px); /* ocupa a tela inteira abaixo da topbar */
+      min-height: calc(100svh - 72px);
       display: flex;
       flex-direction: column;
       align-items: center;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
       padding-bottom: 24px;
+      background-color: #ffffff;
     }
 
     header {
@@ -98,17 +99,18 @@
     /* Área que contém o fundo map.png e os nós em zigue-zague */
     .map-inner {
       position: relative;
-      width: 100vw;                 /* ocupa toda a largura da tela */
-      max-width: none;
-      margin: 8px 0 0;
+      width: 100%;
+      max-width: 1080px;          /* volta a ter bordas laterais em telas grandes */
+      margin: 8px auto 0;
       background-image: url('../../imagens/map.png');
       background-repeat: no-repeat;
       background-position: top center;
       background-size: 100% 100%;
-      aspect-ratio: 1080 / 2880;          /* mantém proporção do mapa */
-      /* fallback aproximado para navegadores antigos */
+      aspect-ratio: 1080 / 2880;  /* mantém proporção do mapa */
+
+      /* fallback para navegadores sem aspect-ratio */
       height: calc(100vw * (2880 / 1080));
-      max-height: calc(100vw * (2880 / 1080));
+      max-height: calc(1080px * (2880 / 1080));
     }
 
     /* Container invisível que segura os botões/click targets */
@@ -125,14 +127,14 @@
       pointer-events: none; /* os <a> internos recebem os eventos */
     }
 
-    /* Botões agora são áreas clicáveis circulares sobre o mapa */
+    /* Botões circulares sobre o mapa */
     .activity-button,
     .teacher-resources,
     .robot-lex,
     .hannah-video {
       position: absolute;
       transform: translate(-50%, -50%);
-      width: 18%;              /* AUMENTADO para acompanhar o círculo azul */
+      width: 40%;              /* MAIOR para cobrir bem o círculo azul */
       aspect-ratio: 1 / 1;
       border-radius: 50%;
       background-color: rgba(255,255,255,0.0);
@@ -141,22 +143,23 @@
       padding: 0;
       display: block;
       text-decoration: none;
-      pointer-events: auto;    /* reativa clique nos links */
-      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease, background-color 0.2s ease;
+      pointer-events: auto;
+      transition: transform 0.2s ease, box-shadow 0.2s ease,
+                  border-color 0.2s ease, background-color 0.2s ease;
     }
 
-    /* IMAGENS DENTRO DOS BOTÕES – AGORA MAIORES */
+    /* Imagens grandes dentro do botão, quase encostando na borda */
     .activity-button img,
     .teacher-resources img,
     .robot-lex img,
     .hannah-video img {
       position: absolute;
-      inset: 5%;              /* menos margem interna, imagem mais cheia */
-      width: 90%;
-      height: 90%;
+      inset: 3%;              /* margem bem pequena */
+      width: 94%;
+      height: 94%;
       object-fit: contain;
       border-radius: 50%;
-      pointer-events: none;    /* clique é sempre no <a> */
+      pointer-events: none;
       display: block;
     }
 
