--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -72,7 +72,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      overflow-y: auto;
+      /* sem overflow interno: rola só a página inteira */
       -webkit-overflow-scrolling: touch;
       padding-bottom: 24px;
       background-color: #ffffff;
@@ -100,17 +100,14 @@
     .map-inner {
       position: relative;
       width: 100%;
-      max-width: 1080px;          /* volta a ter bordas laterais em telas grandes */
+      max-width: 540px;          /* MAIS estreito para imitar celular em telas grandes */
       margin: 8px auto 0;
       background-image: url('../../imagens/map.png');
       background-repeat: no-repeat;
       background-position: top center;
       background-size: 100% 100%;
       aspect-ratio: 1080 / 2880;  /* mantém proporção do mapa */
-
-      /* fallback para navegadores sem aspect-ratio */
-      height: calc(100vw * (2880 / 1080));
-      max-height: calc(1080px * (2880 / 1080));
+      /* sem height baseado em viewport: evita esticar em desktop e criar scroll duplo */
     }
 
     /* Container invisível que segura os botões/click targets */
@@ -134,7 +131,7 @@
     .hannah-video {
       position: absolute;
       transform: translate(-50%, -50%);
-      width: 40%;              /* MAIOR para cobrir bem o círculo azul */
+      width: 34%;              /* reduzido um pouco em relação aos 40% */
       aspect-ratio: 1 / 1;
       border-radius: 50%;
       background-color: rgba(255,255,255,0.0);
@@ -148,15 +145,15 @@
                   border-color 0.2s ease, background-color 0.2s ease;
     }
 
-    /* Imagens grandes dentro do botão, quase encostando na borda */
+    /* Imagens grandes dentro do botão */
     .activity-button img,
     .teacher-resources img,
     .robot-lex img,
     .hannah-video img {
       position: absolute;
-      inset: 3%;              /* margem bem pequena */
-      width: 94%;
-      height: 94%;
+      inset: 6%;              /* mais margem pra não exagerar */
+      width: 88%;
+      height: 88%;
       object-fit: contain;
       border-radius: 50%;
       pointer-events: none;
