--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -23,6 +23,11 @@
     firebase.initializeApp(firebaseConfig);
   </script>
 
+  <!-- Webfont para manter a mesma fonte em todos os dispositivos -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+
   <style>
     /* ====== Base ====== */
     * { margin:0; padding:0; box-sizing:border-box; }
@@ -116,7 +121,7 @@
       width: 48%;
       z-index: 2;
       text-align: left;
-      font-family: "Comic Sans MS", "Trebuchet MS", cursive;
+      font-family: "Patrick Hand", "Comic Sans MS", "Trebuchet MS", cursive;
       color: #145c2c;
       line-height: 1.25;
       pointer-events: none; /* para não atrapalhar cliques no mapa */
@@ -141,10 +146,28 @@
       color: #145c2c;
       margin-bottom: 2px;
     }
-    .unit-verse-text {
-      font-size: 0.85rem;
-      font-style: italic;
-      color: #2f4f3c;
+
+    /* Ajustes para telas menores (responsivo) */
+    @media (max-width: 600px) {
+      .unit-info-box {
+        top: 6%;
+        right: 6%;
+        width: 54%;
+      }
+      .unit-level-line { font-size: 0.8rem; }
+      .unit-title      { font-size: 0.98rem; }
+      .unit-verse-ref  { font-size: 0.85rem; }
+    }
+
+    @media (max-width: 400px) {
+      .unit-info-box {
+        top: 5.5%;
+        right: 5%;
+        width: 60%;
+      }
+      .unit-level-line { font-size: 0.75rem; }
+      .unit-title      { font-size: 0.9rem; }
+      .unit-verse-ref  { font-size: 0.8rem; }
     }
 
     /* Container invisível que segura os botões/click targets */
@@ -264,7 +287,6 @@
         <div class="unit-level-line" id="unit-level-line"></div>
         <div class="unit-title" id="unit-title"></div>
         <div class="unit-verse-ref" id="unit-verse-ref"></div>
-        <div class="unit-verse-text" id="unit-verse-text"></div>
       </div>
 
       <main>
@@ -330,14 +352,13 @@
   }
 
   /* ==========
-     Header dinâmico: Level / Unit / Título / Versículo
+     Header dinâmico: Level / Unit / Título / Versículo (somente linha 1 e 2)
   ========== */
   async function loadUnitHeader() {
     const levelLineEl = document.getElementById("unit-level-line");
     const titleEl     = document.getElementById("unit-title");
     const verseRefEl  = document.getElementById("unit-verse-ref");
-    const verseTextEl = document.getElementById("unit-verse-text");
-    if (!levelLineEl || !titleEl || !verseRefEl || !verseTextEl) return;
+    if (!levelLineEl || !titleEl || !verseRefEl) return;
 
     // Level display – Starter para Level0
     const levelRaw = __levelDB || __level;
@@ -373,12 +394,9 @@
         .map(l => l.trim())
         .filter(l => l.length > 0);
 
+      // Apenas linha 1 (título) e linha 2 (referência)
       if (lines[0]) titleEl.textContent = lines[0];
       if (lines[1]) verseRefEl.textContent = lines[1];
-      if (lines.length > 2) {
-        const verseLines = lines.slice(2);
-        verseTextEl.innerHTML = verseLines.join("<br>");
-      }
     } catch (e) {
       console.warn("Falha ao carregar título/versículo:", e?.message);
       // fallback: mantém só o Level/Unit, sem quebrar layout
