--- a/Atividades/Perguntas Starter - Copy/index.html
+++ b/Atividades/Perguntas Starter - Copy/index.html
@@ -21,7 +21,7 @@
   /* ===== App container ===== */
   .app{
     width:100%;
-    max-width:1140px;
+    max-width:1140px;                 /* ↑ aproveita melhor a largura em telas grandes */
     margin: 12px auto 24px auto;
     background:var(--card);
     border-radius:var(--radius);
@@ -33,10 +33,10 @@
 
   /* ===== Back separado (acima do header) ===== */
   #back-button{
-    display:inline-flex;
+    display:inline-flex;              /* não vira barra inteira */
     align-items:center;
     gap:.5rem;
-    width:auto !important;
+    width:auto !important;            /* força largura só do conteúdo */
     max-width:none;
     margin-bottom:8px;
     border:none; background:#eef2ff; color:#0f3ea8;
@@ -76,9 +76,10 @@
   .stage{display:grid;gap:16px}
   .question-card{
     background:#f9fbff;border:1px solid #e5eaf5;border-radius:16px;padding:14px;
-    margin: 0 auto;
+    margin: 0 auto;                   /* garante centralização visual */
   }
 
+  /* Texto em largura total; imagem abaixo (mobile-first) */
   .q-top{display:flex;flex-direction:column;gap:14px}
   .q-prompt{font-size:22px;font-weight:800;line-height:1.3;word-break:break-word}
   .q-media{width:100%;aspect-ratio:16/10;background:#eef4ff;border:1px dashed #cfe0ff;border-radius:14px;padding:8px;overflow:hidden;display:block}
@@ -104,6 +105,7 @@
   .option .label{font-size:19px;font-weight:800;letter-spacing:.2px;word-break:break-word}
   .option .sub{font-size:13px;color:var(--muted)}
 
+  /* Estados certo/errado */
   .square-outline{width:38px;height:38px;border:6px solid var(--sq,#7c3aed);border-radius:10px;background:transparent;display:inline-block;position:relative;transition:border-color .2s ease,background .2s ease,transform .15s ease}
   .option.ok .square-outline{border-color:#16a34a;background:#dcfce7}
   .option.ok .square-outline::after{content:"✔";position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:#166534;font-size:20px;font-weight:900;animation:pop-in .18s ease-out}
@@ -120,13 +122,16 @@
   .next-btn.ready{opacity:1;pointer-events:auto}
   .next-btn:active{transform:translateY(1px)}
 
+  /* Confete */
   .confetti{position:absolute;inset:0;pointer-events:none;overflow:hidden}
   .piece{position:absolute;width:10px;height:10px;background:hsl(var(--h) 80% 60%);top:-12px;border-radius:2px;animation:drop linear forwards}
   @keyframes drop{to{transform:translateY(120vh) rotate(540deg)}}
 
+  /* Toast + acessibilidade */
   .toast{position:fixed;left:50%;bottom:24px;transform:translateX(-50%);background:#111827;color:#fff;padding:10px 14px;border-radius:12px;font-size:14px;box-shadow:var(--shadow);opacity:.96}
   .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
 
+  /* ORDER/MATCH */
   .build-wrap{margin-top:8px;position:sticky;top:0;z-index:3;background:#f9fbff;padding-bottom:8px;box-shadow:0 6px 10px -8px rgba(0,0,0,.15)}
   .build-tray{min-height:56px;background:#eef4ff;border:2px dashed #cfe0ff;border-radius:14px;padding:10px;display:flex;flex-wrap:wrap;gap:8px;align-items:center}
   .word-chip{background:#fff;border:2px solid #dbe5ff;border-radius:12px;padding:8px 12px;font-weight:800;box-shadow:0 2px 6px rgba(0,0,0,.05);user-select:none}
@@ -141,6 +146,7 @@
   .option.word-only{gap:0;justify-content:center}
   .option.word-only .label{width:100%;text-align:center;font-size:22px;font-weight:800}
 
+  /* Blank responsivo */
   .blank{
     display:inline-block;
     vertical-align:baseline;
@@ -150,6 +156,7 @@
     margin:0 .3em;
   }
 
+  /* Loader */
   .loading{position:fixed;inset:0;background:rgba(255,255,255,.75);display:flex;align-items:center;justify-content:center;z-index:9999;backdrop-filter:blur(2px);font-weight:700;color:#334155}
   .spinner{width:42px;height:42px;border-radius:50%;border:4px solid #c7d2fe;border-top-color:#3b82f6;animation:spin 1s linear infinite;margin-right:10px}
   @keyframes spin{to{transform:rotate(360deg)}}
@@ -157,15 +164,19 @@
   .icon-btn[disabled]{opacity:.4;pointer-events:none}
   .is-hidden{display:none!important}
 
+  /* ===== Mobile ===== */
   @media (max-width:720px){
     .options{grid-template-columns:1fr}
     .q-prompt{font-size:20px}
     .badge{grid-column:1/-1;max-width:100%}
   }
 
+  /* ===== Desktop otimizado ===== */
   @media (min-width: 1024px){
+    /* Cabe dentro do card sem “campo vazio” */
     .question-card{ padding:12px; }
 
+    /* Layout lado a lado no topo */
     .q-top{
       display:grid;
       grid-template-columns: minmax(300px, 40%) 1fr;
@@ -173,25 +184,30 @@
       gap:16px;
     }
 
+    /* Mídia menor no desktop/tablet */
     .q-media{
       aspect-ratio:auto;
-      height: clamp(160px, 24vh, 260px);
+      height: clamp(160px, 24vh, 260px);  /* ↓ imagem compacta para caber opções */
       max-width:100%;
     }
 
+    /* 3 colunas para ocupar a largura e eliminar “buracos” */
     .options{
       grid-template-columns: repeat(3, minmax(0, 1fr));
       gap:12px;
       margin-top:10px;
     }
 
+    /* Cartões mais compactos em telas grandes */
     .option{ min-height:68px; padding:10px 12px; }
     .option .thumb{ width:54px; height:54px; flex-basis:54px; }
     .option .label{ font-size:18px; }
 
+    /* Texto levemente menor para equilibrar o conjunto */
     .q-prompt{ font-size:20px; }
   }
 
+  /* ===== Tablets paisagem baixos (evita scroll) ===== */
   @media (min-width: 900px) and (max-height: 820px){
     .q-top{ grid-template-columns: minmax(280px, 38%) 1fr; gap:12px; }
     .q-media{ height: clamp(150px, 22vh, 240px); }
@@ -206,6 +222,7 @@
   <div class="app" id="app">
     <button id="back-button" onclick="goBack()">Back</button>
 
+    <!-- Confete precisa existir no DOM -->
     <div class="confetti" id="confetti"></div>
 
     <div class="header">
@@ -241,6 +258,7 @@
     </div>
   </div>
 
+  <!-- Loader -->
   <div class="loading" id="loading" aria-live="polite" style="display:none">
     <div class="spinner" aria-hidden="true"></div>
     <span>Loading…</span>
@@ -343,7 +361,6 @@ firebase.auth().onAuthStateChanged(function(user){
         await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
       } else if(fase === "end"){
         const nextLevel = `Level${parseInt((level||'').replace(/\D/g,''),10) + 1}`;
-
         await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
       } else {
         const nextPhase = parseInt(fase,10) + 1;
@@ -405,138 +422,28 @@ firebase.auth().onAuthStateChanged(function(user){
   [sCorrect,sWrong,sTap,sNext].forEach(a=>{a.preload='auto'});
 
   /* =========================
-     Firebase: título + questões
+     Load questions
   ========================= */
-  async function loadTitleFromFile(){
-    try{
-      const resp = await fetch(QFILE, { cache:'no-store' });
-      if (!resp.ok) return null;
-      const text = await resp.text();
+  showLoader(true);
+  fetch(QFILE, {cache:'no-store'})
+    .then(r => { if(!r.ok) throw new Error(`Could not load ${QFILE} (HTTP ${r.status})`); return r.text(); })
+    .then(text => {
       const data = JSON.parse(text);
-      if (data && typeof data.title === 'string' && data.title.trim()){
-        return data.title.trim();
-      }
-    }catch(err){
-      console.warn('[Q&A] Could not load title from questions.txt:', err);
-    }
-    return null;
-  }
-
-  async function loadActivityQuestionsFromFirebase(levelKey, unitKey, faseParam){
-    const faseKey = faseParam || '1';
-    const activityKey = `${levelKey}_${unitKey}_Fase${faseKey}`;
-
-    const activitySnap = await firebase.database()
-      .ref(`activities/${activityKey}`)
-      .once('value');
-    const activity = activitySnap.val();
-
-    if (!activity || !Array.isArray(activity.questionIds) || activity.questionIds.length === 0){
-      throw new Error(`No questionIds configured for activity ${activityKey}`);
-    }
-
-    const questionIds = activity.questionIds;
-    const snaps = await Promise.all(
-      questionIds.map(id =>
-        firebase.database().ref(`questions/${id}`).once('value')
-      )
-    );
-
-    const list = [];
-    snaps.forEach((snap, index) => {
-      const val = snap.val();
-      if (!val) return;
-      const q = { ...val };
-
-      q.id = q.id || questionIds[index];
-      q.level = q.level || levelKey;
-      q.unit  = q.unit  || unitKey;
-      q.fase  = q.fase  || faseKey;
-
-      if (!q.type) q.type = 'mcq';
-      if (!Array.isArray(q.options)) q.options = [];
-
-      list.push(q);
-    });
-
-    if (!list.length){
-      throw new Error(`Questions not found in database for activity ${activityKey}`);
-    }
-    return list;
-  }
-
-  /* =========================
-     Log de respostas do aluno
-  ========================= */
-  function logAnswer(question, isCorrect){
-    if (!question || !question.id) return;
-    ensureUserIsAuthenticated(function(uid){
-      if (!uid) return;
-      const ref = firebase.database().ref(`userAnswers/${uid}/${question.id}`);
-      ref.transaction(prev => {
-        const now = Date.now();
-        const meta = {
-          level:      question.level || levelDir,
-          unit:       question.unit  || unitDir,
-          fase:       question.fase  || (fase || null),
-          grammarTag: question.grammarTag || null,
-          skillType:  question.skillType  || null,
-          difficulty: question.difficulty || null
-        };
-
-        if (!prev){
-          return {
-            ...meta,
-            totalAttempts: 1,
-            correctAttempts: isCorrect ? 1 : 0,
-            firstAttemptResult: isCorrect ? 'correct' : 'wrong',
-            lastIsCorrect: isCorrect,
-            lastTimestamp: now
-          };
-        }
-
-        const totalAttempts   = (prev.totalAttempts   || 0) + 1;
-        const correctAttempts = (prev.correctAttempts || 0) + (isCorrect ? 1 : 0);
-        const firstAttemptResult = prev.firstAttemptResult || (isCorrect ? 'correct' : 'wrong');
-
-        return {
-          ...prev,
-          ...meta,
-          totalAttempts,
-          correctAttempts,
-          firstAttemptResult,
-          lastIsCorrect: isCorrect,
-          lastTimestamp: now
-        };
-      });
-    });
-  }
-
-  /* =========================
-     Init (carrega título + questões)
-  ========================= */
-  async function initActivity(){
-    showLoader(true);
-    try{
-      const title = await loadTitleFromFile();
-      subtitle.textContent = title || 'Practice answering quickly and carefully!';
-
-      const loadedQuestions = await loadActivityQuestionsFromFirebase(levelDir, unitDir, fase);
-      questions = loadedQuestions;
+      if(!data || !Array.isArray(data.questions)) throw new Error('Invalid format in questions.txt');
+      questions = data.questions;
+      subtitle.textContent = data.title || 'Practice answering quickly and carefully!';
       idx = 0;
       renderQuestion();
-    }catch(err){
-      console.error('[Q&A] Init failed:', err);
-      toast('Error loading questions. Please check database configuration.');
+    })
+    .catch(err=>{
+      console.error('[Q&A] Load failed:', err);
+      toast('Error loading questions. Check level, unit and questions.txt.');
       subtitle.textContent = 'Failed to load content';
-      promptEl.textContent =
-        `Could not load questions from database.\nLevel: ${levelDir}\nUnit: ${unitDir}\nPhase: ${fase || '-'}`;
+      promptEl.textContent = `Path not found.\nBASE: ${BASE}\nFile: ${QFILE}`;
       mediaBox.innerHTML = '';
       optionsEl.innerHTML = '';
-    }finally{
-      showLoader(false);
-    }
-  }
+    })
+    .finally(()=> showLoader(false));
 
   /* =========================
      Prompt/blank utils + TTS builder
@@ -793,12 +700,10 @@ firebase.auth().onAuthStateChanged(function(user){
         answered = true;
         Array.from(optionsEl.querySelectorAll('.option')).forEach(el=> el.disabled = true);
         undoBtn.disabled = true; clearBtn.disabled = true;
-        logAnswer(q, true);
       } else {
         (ensureAudio()? sfxWrong() : sWrong.play().catch(()=>{}));
         speakFriendly(['Try again!']);
         liveEl.textContent = 'Incorrect order, try again';
-        logAnswer(q, false);
       }
     }
   }
@@ -908,14 +813,12 @@ firebase.auth().onAuthStateChanged(function(user){
             answered = true;
             btnNext.disabled = false; btnNext.classList.add('ready');
             Array.from(optionsEl.querySelectorAll('.option')).forEach(el => el.disabled = true);
-            logAnswer(q, true);
           }
         } else {
           (ensureAudio()? sfxWrong() : sWrong.play().catch(()=>{}));
           speakFriendly(['Try again!']);
           b.classList.add('err');
           setTimeout(()=>b.classList.remove('err'), 250);
-          logAnswer(q, false);
         }
       };
       return b;
@@ -931,9 +834,6 @@ firebase.auth().onAuthStateChanged(function(user){
   function handleAnswer(q, opt, btn){
     if(answered) return;
     const isCorrect = normalize(opt.value) === normalize(q.answer);
-
-    // registra tentativa (primeira, segunda, etc.)
-    logAnswer(q, isCorrect);
 
     if(isCorrect){
       btn.classList.add('ok');
@@ -977,6 +877,7 @@ firebase.auth().onAuthStateChanged(function(user){
     }
   }
 
+  /* === espera terminar a fala/áudio da opção antes de checar === */
   function speakSelectedThenCheck(q, o, btn){
     if (answered || isReading) return;
     isReading = true;
@@ -1073,10 +974,7 @@ firebase.auth().onAuthStateChanged(function(user){
   function showLoader(v){ if (loadingEl) loadingEl.style.display = v ? 'flex' : 'none'; }
 
   window.activityCompleted = false;
-  window.addEventListener('load', function(){
-    window.activityCompleted = false;
-    initActivity();
-  });
+  window.addEventListener('load', function(){ window.activityCompleted = false; });
 
   /* Back button (confirmations) */
   window.goBack = async function goBack(){
