--- a/index.html
+++ b/index.html
@@ -715,15 +715,18 @@ firebase.auth().onAuthStateChanged(async user=>{
 
       let dash="";
 
-      if(d.role==="proprietario"||d.role==="professor"){
-        if(d.role==="proprietario"){
-          dash = `
-        <a href="painel_proprietario.html" class="dashboard-link">PROPRIETARIO DASHBOARD</a>
-        <a href="upload-questões.html" class="dashboard-link">UPLOAD QUESTIONS</a>
-      `;
-        } else {
-          dash = `<a href="painel_professor.html" class="dashboard-link">PROFESSOR DASHBOARD</a>`;
+      // ========== BLOCO DE DASHBOARD (ALTERADO APENAS AQUI) ==========
+      if(d.role==="proprietario"||d.role==="professor"){   // <<< ALTERADO
+        const hrefBase = `painel_${d.role==='proprietario'?'proprietario':'professor'}.html`;
+        const labelBase = `${d.role.toUpperCase()} DASHBOARD`;
+
+        dash = `<a href="${hrefBase}" class="dashboard-link">${labelBase}</a>`;
+
+        // Se for proprietário, adiciona mais um link:
+        if (d.role === "proprietario") {
+          dash += `<a href="upload-questoes.html" class="dashboard-link">UPLOAD DE QUESTÕES</a>`;
         }
+
         liberarNiveis(VALID_LEVELS);
       }
       else if(d.role==="aluno"){
@@ -787,6 +790,7 @@ firebase.auth().onAuthStateChanged(async user=>{
           tentarAlunoDireto();
         }
       }
+      // ========== FIM DO BLOCO ALTERADO ==========
 
       userDropdown.innerHTML=`
         ${dash}
