--- a/index novocomproblema.html
+++ b/index novocomproblema.html
@@ -715,8 +715,18 @@ firebase.auth().onAuthStateChanged(async user=>{
 
       let dash="";
 
-      if(d.role==="proprietario"||d.role==="professor"){
-        dash=`<a href="painel_${d.role==='proprietario'?'proprietario':'professor'}.html" class="dashboard-link">${d.role.toUpperCase()} DASHBOARD</a>`;
+      // ========== BLOCO DE DASHBOARD (ALTERADO APENAS AQUI) ==========
+      if(d.role==="proprietario"||d.role==="professor"){   // <<< ALTERADO
+        const hrefBase = `painel_${d.role==='proprietario'?'proprietario':'professor'}.html`;
+        const labelBase = `${d.role.toUpperCase()} DASHBOARD`;
+
+        dash = `<a href="${hrefBase}" class="dashboard-link">${labelBase}</a>`;
+
+        // Se for proprietário, adiciona mais um link:
+        if (d.role === "proprietario") {
+          dash += `<a href="upload-questoes.html" class="dashboard-link">UPLOAD DE QUESTÕES</a>`;
+        }
+
         liberarNiveis(VALID_LEVELS);
       }
       else if(d.role==="aluno"){
@@ -780,6 +790,7 @@ firebase.auth().onAuthStateChanged(async user=>{
           tentarAlunoDireto();
         }
       }
+      // ========== FIM DO BLOCO ALTERADO ==========
 
       userDropdown.innerHTML=`
         ${dash}
