--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       font-size:clamp(18px, 3.5vw, 26px);
       margin:0;
       color:#4CAF50;
-      text-shadow:none !important;    /* sem sombra */
+      text-shadow:none !important;
       font-family:Arial, sans-serif;
     }
 
@@ -716,7 +716,14 @@ firebase.auth().onAuthStateChanged(async user=>{
       let dash="";
 
       if(d.role==="proprietario"||d.role==="professor"){
-        dash=`<a href="painel_${d.role==='proprietario'?'proprietario':'professor'}.html" class="dashboard-link">${d.role.toUpperCase()} DASHBOARD</a>`;
+        if(d.role==="proprietario"){
+          dash =
+            '<a href="painel_proprietario.html" class="dashboard-link">PROPRIETARIO DASHBOARD</a>' +
+            '<a href="upload-questoes.html" class="dashboard-link">UPLOAD DE QUESTÕES</a>';
+        } else {
+          dash =
+            '<a href="painel_professor.html" class="dashboard-link">PROFESSOR DASHBOARD</a>';
+        }
         liberarNiveis(VALID_LEVELS);
       }
       else if(d.role==="aluno"){
