--- a/index_Copy.html
+++ b/index_Copy.html
@@ -715,18 +715,8 @@ firebase.auth().onAuthStateChanged(async user=>{
 
       let dash="";
 
-      // ========== BLOCO DE DASHBOARD (ALTERADO APENAS AQUI) ==========
-      if(d.role==="proprietario"||d.role==="professor"){   // <<< ALTERADO
-        const hrefBase = `painel_${d.role==='proprietario'?'proprietario':'professor'}.html`;
-        const labelBase = `${d.role.toUpperCase()} DASHBOARD`;
-
-        dash = `<a href="${hrefBase}" class="dashboard-link">${labelBase}</a>`;
-
-        // Se for proprietário, adiciona mais um link:
-        if (d.role === "proprietario") {
-          dash += `<a href="upload-questoes.html" class="dashboard-link">UPLOAD DE QUESTÕES</a>`;
-        }
-
+      if(d.role==="proprietario"||d.role==="professor"){
+        dash=`<a href="painel_${d.role==='proprietario'?'proprietario':'professor'}.html" class="dashboard-link">${d.role.toUpperCase()} DASHBOARD</a>`;
         liberarNiveis(VALID_LEVELS);
       }
       else if(d.role==="aluno"){
@@ -790,7 +780,6 @@ firebase.auth().onAuthStateChanged(async user=>{
           tentarAlunoDireto();
         }
       }
-      // ========== FIM DO BLOCO ALTERADO ==========
 
       userDropdown.innerHTML=`
         ${dash}
