--- a/upload-questoes.html
+++ b/upload-questoes.html
@@ -198,9 +198,87 @@
     font-size:13px;
   }
 
+  /* ==== seção de busca/listagem ==== */
+  .section-box{
+    margin-top:22px;
+    padding-top:16px;
+    border-top:1px solid #e5e7eb;
+  }
+  .section-title{
+    font-size:15px;
+    font-weight:700;
+    margin-bottom:4px;
+  }
+  .section-sub{
+    font-size:12px;
+    color:var(--muted);
+    margin-bottom:10px;
+  }
+  .search-row{
+    display:grid;
+    grid-template-columns:repeat(3,minmax(0,1fr));
+    gap:10px 12px;
+    margin-bottom:8px;
+  }
+  .results-list{
+    margin-top:8px;
+    display:flex;
+    flex-direction:column;
+    gap:8px;
+  }
+  .q-row{
+    border-radius:12px;
+    border:1px solid #e5e7eb;
+    background:#f9fafb;
+    padding:8px 10px;
+    display:flex;
+    flex-direction:column;
+    gap:3px;
+  }
+  .q-row-header{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    gap:8px;
+  }
+  .q-row-id{
+    font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,"Liberation Mono","Courier New", monospace;
+    font-size:12px;
+  }
+  .q-row-meta{
+    font-size:11px;
+    color:var(--muted);
+  }
+  .q-row-prompt{
+    font-size:12px;
+    margin-top:4px;
+    color:#111827;
+    max-height:3.4em;
+    overflow:hidden;
+    display:-webkit-box;
+    -webkit-line-clamp:2;
+    -webkit-box-orient:vertical;
+  }
+  .row-buttons{
+    margin-top:4px;
+    display:flex;
+    gap:6px;
+    flex-wrap:wrap;
+  }
+  .btn-xs{
+    padding:4px 8px;
+    font-size:11px;
+    border-radius:999px;
+  }
+  .btn-danger{
+    background:#fee2e2;
+    color:#b91c1c;
+  }
+
   @media(max-width:720px){
     .app{padding:14px 10px 18px;}
     form{grid-template-columns:1fr;}
+    .search-row{grid-template-columns:1fr;}
   }
 </style>
 </head>
@@ -216,6 +294,7 @@
     <div class="badge">Owner Dashboard</div>
   </div>
 
+  <!-- ===== FORMULÁRIO DE CADASTRO/EDIÇÃO ===== -->
   <form id="q-form">
     <div class="field">
       <label for="level">Level</label>
@@ -281,6 +360,36 @@
     </div>
   </form>
 
+  <!-- ===== SEÇÃO DE BUSCA / LISTAGEM ===== -->
+  <div class="section-box">
+    <div class="section-title">Pesquisar / editar questões existentes</div>
+    <div class="section-sub">
+      Informe Level, Unit e Fase para ver todas as questões daquela atividade.  
+      Você pode carregar qualquer questão para o formulário acima ou apagá-la.
+    </div>
+
+    <div class="search-row">
+      <div class="field">
+        <label for="search-level">Level</label>
+        <input id="search-level" type="text" placeholder="Ex.: Level0" />
+      </div>
+      <div class="field">
+        <label for="search-unit">Unit</label>
+        <input id="search-unit" type="text" placeholder="Ex.: Unit1" />
+      </div>
+      <div class="field">
+        <label for="search-fase">Fase</label>
+        <input id="search-fase" type="number" min="1" step="1" placeholder="Ex.: 7" />
+      </div>
+    </div>
+
+    <button type="button" class="btn-secondary" id="btnSearchQuestions">
+      🔍 Carregar questões da fase
+    </button>
+
+    <div id="searchResults" class="results-list"></div>
+  </div>
+
   <div class="status" id="status">
     <b>Status:</b> aguardando dados…
   </div>
@@ -289,7 +398,7 @@
 <div class="loading-overlay" id="loading">
   <div class="loading-box">
     <div class="spinner"></div>
-    <span>Salvando no Firebase…</span>
+    <span>Processando no Firebase…</span>
   </div>
 </div>
 
@@ -351,6 +460,8 @@
     if (!el) return;
     el.style.display = flag ? 'flex' : 'none';
     document.getElementById('btnSave').disabled = !!flag;
+    const btnSearch = document.getElementById('btnSearchQuestions');
+    if (btnSearch) btnSearch.disabled = !!flag;
   }
 
   // ==== Templates rápidos para JSON ====
@@ -497,6 +608,216 @@
       showLoading(false);
     }
   });
+
+  // ===== BUSCA / LISTAGEM =====
+  const searchLevelEl = document.getElementById('search-level');
+  const searchUnitEl  = document.getElementById('search-unit');
+  const searchFaseEl  = document.getElementById('search-fase');
+  const searchBtn     = document.getElementById('btnSearchQuestions');
+  const resultsEl     = document.getElementById('searchResults');
+
+  let lastSearch = null; // guarda última busca (para recarregar após apagar)
+
+  async function performSearch(levelRaw, unitRaw, faseRaw){
+    const lvl = levelRaw.trim();
+    const unt = unitRaw.trim();
+    const fs  = faseRaw.trim();
+
+    if (!lvl || !unt || !fs){
+      showToast("Preencha Level, Unit e Fase para buscar.");
+      return;
+    }
+
+    const levelKey = normalizeDir("Level", lvl, "0");
+    const unitKey  = normalizeDir("Unit",  unt, "1");
+    const faseKey  = String(parseInt(fs,10) || 1);
+    const activityKey = `${levelKey}_${unitKey}_Fase${faseKey}`;
+
+    showLoading(true);
+    resultsEl.innerHTML = "";
+    setStatus("<b>Status:</b> carregando questões de <code>activities/"+activityKey+"</code>…");
+
+    try{
+      const actRef = firebase.database().ref("activities/"+activityKey);
+      const snap = await actRef.once("value");
+      const act  = snap.val();
+
+      if (!act || !Array.isArray(act.questionIds) || act.questionIds.length === 0){
+        resultsEl.innerHTML = "<div class='hint'>Nenhuma questão cadastrada para esta atividade ainda.</div>";
+        setStatus("<b>Status:</b> nenhuma questão encontrada em <code>activities/"+activityKey+"</code>.");
+        lastSearch = {activityKey, levelKey, unitKey, faseKey, items: []};
+        return;
+      }
+
+      const ids = act.questionIds;
+      const promises = ids.map(id => firebase.database().ref("questions/"+id).once("value"));
+      const snaps = await Promise.all(promises);
+
+      const items = snaps.map((s, index) => {
+        const data = s.val() || {};
+        return {
+          id: ids[index],
+          data,
+          pos: index + 1
+        };
+      });
+
+      lastSearch = {activityKey, levelKey, unitKey, faseKey, items};
+      renderResults(activityKey, items);
+
+      setStatus(
+        "<b>Status:</b> carregadas " + items.length +
+        " questão(ões) de <code>activities/"+activityKey+"</code>."
+      );
+    } catch(err){
+      console.error("Erro ao buscar questões:", err);
+      showToast("Erro ao buscar questões. Veja o console.");
+      setStatus("<b>Status:</b> erro ao buscar questões.<span class='pill-err'>Erro</span>");
+    } finally{
+      showLoading(false);
+    }
+  }
+
+  function renderResults(activityKey, items){
+    resultsEl.innerHTML = "";
+    if (!items || items.length === 0){
+      resultsEl.innerHTML = "<div class='hint'>Nenhuma questão encontrada.</div>";
+      return;
+    }
+
+    items.forEach(item => {
+      const q   = item.data || {};
+      const div = document.createElement('div');
+      div.className = 'q-row';
+
+      const header = document.createElement('div');
+      header.className = 'q-row-header';
+
+      const idSpan = document.createElement('div');
+      idSpan.className = 'q-row-id';
+      idSpan.textContent = item.id;
+
+      const meta = document.createElement('div');
+      meta.className = 'q-row-meta';
+      const ord = (q.order != null ? q.order : item.pos);
+      meta.textContent =
+        "ordem: " + ord +
+        (q.type ? " | type: " + q.type : "") +
+        (q.grammarTag ? " | " + q.grammarTag : "") +
+        (q.difficulty ? " | " + q.difficulty : "");
+
+      header.appendChild(idSpan);
+      header.appendChild(meta);
+      div.appendChild(header);
+
+      if (q.prompt){
+        const p = document.createElement('div');
+        p.className = 'q-row-prompt';
+        p.textContent = q.prompt;
+        div.appendChild(p);
+      }
+
+      const btnRow = document.createElement('div');
+      btnRow.className = 'row-buttons';
+
+      const btnEdit = document.createElement('button');
+      btnEdit.type = 'button';
+      btnEdit.className = 'btn-secondary btn-xs';
+      btnEdit.textContent = '✏️ Editar';
+      btnEdit.onclick = () => editQuestionFromList(item.id);
+
+      const btnDel = document.createElement('button');
+      btnDel.type = 'button';
+      btnDel.className = 'btn-danger btn-xs';
+      btnDel.textContent = '🗑️ Apagar';
+      btnDel.onclick = () => deleteQuestionFromList(activityKey, item.id);
+
+      btnRow.appendChild(btnEdit);
+      btnRow.appendChild(btnDel);
+      div.appendChild(btnRow);
+
+      resultsEl.appendChild(div);
+    });
+  }
+
+  searchBtn.addEventListener('click', () => {
+    performSearch(
+      searchLevelEl.value || document.getElementById('level').value || "",
+      searchUnitEl.value  || document.getElementById('unit').value  || "",
+      searchFaseEl.value  || document.getElementById('fase').value  || ""
+    );
+  });
+
+  // ===== Editar: carrega dados para o formulário principal =====
+  function editQuestionFromList(questionId){
+    if (!lastSearch || !lastSearch.items) return;
+    const item = lastSearch.items.find(it => it.id === questionId);
+    if (!item){
+      showToast("Questão não encontrada no cache da busca.");
+      return;
+    }
+    const q = item.data || {};
+
+    // Preenche Level/Unit/Fase com base na última busca
+    document.getElementById('level').value = lastSearch.levelKey;
+    document.getElementById('unit').value  = lastSearch.unitKey;
+    document.getElementById('fase').value  = lastSearch.faseKey;
+
+    document.getElementById('questionId').value = questionId;
+    document.getElementById('order').value      = (q.order != null ? q.order : item.pos) || "";
+
+    const selType = document.getElementById('typeQuick');
+    if (q.type && Array.from(selType.options).some(o => o.value === q.type)){
+      selType.value = q.type;
+    } else {
+      selType.value = "";
+    }
+
+    txtJson.value = JSON.stringify(q, null, 2);
+
+    window.scrollTo({top:0, behavior:'smooth'});
+    showToast("Questão carregada para edição.");
+  }
+
+  // ===== Apagar questão =====
+  async function deleteQuestionFromList(activityKey, questionId){
+    if (!confirm("Tem certeza que deseja apagar esta questão?\n\nID: " + questionId)){
+      return;
+    }
+
+    showLoading(true);
+    try{
+      // remove question
+      await firebase.database().ref("questions/"+questionId).remove();
+
+      // atualiza activity
+      const actRef = firebase.database().ref("activities/"+activityKey);
+      const snap = await actRef.once("value");
+      const act  = snap.val() || {};
+      let ids    = Array.isArray(act.questionIds) ? act.questionIds : [];
+      ids = ids.filter(id => id !== questionId);
+      act.questionIds = ids;
+      await actRef.set(act);
+
+      showToast("Questão apagada.");
+      setStatus("<b>Status:</b> questão apagada de <code>questions/"+questionId+"</code> e atualizada em <code>activities/"+activityKey+"</code>.");
+
+      // recarrega a lista com a última busca
+      if (lastSearch){
+        await performSearch(lastSearch.levelKey, lastSearch.unitKey, lastSearch.faseKey);
+      }
+    } catch(err){
+      console.error("Erro ao apagar questão:", err);
+      showToast("Erro ao apagar questão. Veja o console.");
+      setStatus("<b>Status:</b> erro ao apagar questão.<span class='pill-err'>Erro</span>");
+    } finally{
+      showLoading(false);
+    }
+  }
+
+  // expõe funções no escopo global (caso precise no console)
+  window.editQuestionFromList = editQuestionFromList;
+  window.deleteQuestionFromList = deleteQuestionFromList;
 </script>
 </body>
 </html>
